Added custom pagination to list
